# SulacoLAN

./: README.md
banners/: STU_banner.txt  SulacoLAN_banner.txt  mtgping_banner.txt  newt_banner.txt  ripley_banner.txt  ripley_banner4.txt  ripley_banner5.txt  ripley_banner6.txt  ripley_banner7.txt  ripley_banner_b.txt
netprog/MTGP/: .editorconfig  CMakeLists.txt  README.md
netprog/boids_cge/: CMakeLists.txt  README.md
netprog/net_tools/: .editorconfig  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  README.md.alt  SulacoLAN_banner.txt
netprog/net_tools/include/mcw/: config.hpp  print.hpp  print.hpp.prev
netprog/net_tools/include/mcw/net/: ipv4_addr.hpp  ipv4_network.hpp  platform.hpp
netprog/net_tools/include/mcw/tui/: menu.hpp
netprog/net_tools/scripts/: buglog.sh  develop.sh
netprog/net_tools/src/: main.cpp
netprog/net_tools/src/tui/: menu.cpp
netprog/subnetdrill/: .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  SulacoLAN_Topology2.odg
scripts/: Interactive_New_Project.sh  Interactive_New_Project_Final.sh  cdls  chogp.sh  heic_to_jpg.sh  idea  launch_windows_apps_1_1  launch_windows_apps_1_2  new-c  new-cpp  new-h  new-hpp  new_c_lang_project.sh  new_cmake_1031_1_5  new_ncurses_tui_project.sh  new_netproj.sh
scripts/STU_SLU_VIDEO_SCRIPTS/: archive_stuvideo_project.sh  ingest_stuvideo_inbox.sh  new_stuvideo_project.sh  promote_stuvideo_project.sh  set_stuvideo_links.sh
scripts/new_project_generators/: new_mkfile_proj_earlier.sh  new_mkfile_proj_generator
scripts/powershell/: Copy-iPhoneToUsb.ps1
(+61 files in other folders)
